--- a/bencher/Dockerfile
+++ b/bencher/Dockerfile
@@ -25,11 +25,13 @@ RUN wget https://github.com/JetBrains/kotlin/releases/download/v1.7.21/kotlin-co
 # Kotlin Native
 RUN wget https://github.com/JetBrains/kotlin/releases/download/v1.7.21/kotlin-native-linux-x86_64-1.7.21.tar.gz \
     && apt install tar \
-    && tar -xvzf kotlin-native-linux-x86_64-1.7.21.tar.gz -C /root \
+    && tar -xzf kotlin-native-linux-x86_64-1.7.21.tar.gz -C /root \
     && rm -f kotlin-native-linux-x86_64-1.7.21.tar.gz \
     && ln -s /root/kotlin-native-linux-x86_64-1.7.21/bin/kotlinc-native /usr/local/bin/kotlinc-native \
     && ln -s /root/kotlin-native-linux-x86_64-1.7.21/bin/run_konan /usr/local/bin/run_konan
 # C Sharp
 RUN apt install -y aspnetcore-runtime-6.0 \
-    && apt install -y dotnet-sdk-6.0
+    && apt install -y dotnet-sdk-6.0 \
+# Cython
+RUN apt install cython 
 
