--- a/bencher/Dockerfile
+++ b/bencher/Dockerfile
@@ -21,7 +21,7 @@ RUN wget https://github.com/JetBrains/kotlin/releases/download/v1.7.21/kotlin-co
     && apt install unzip \
     && unzip kotlin-compiler-1.7.21.zip -d /root \
     && rm -f kotlin-compiler-1.7.21.zip \
-    && ln -s /root/kotlinc/bin/kotlinc /usr/local/bin/kotlinc \
+    && ln -s /root/kotlinc/bin/kotlinc /usr/local/bin/kotlinc
 # Kotlin Native
 RUN wget https://github.com/JetBrains/kotlin/releases/download/v1.7.21/kotlin-native-linux-x86_64-1.7.21.tar.gz \
     && apt install tar \
@@ -31,7 +31,7 @@ RUN wget https://github.com/JetBrains/kotlin/releases/download/v1.7.21/kotlin-na
     && ln -s /root/kotlin-native-linux-x86_64-1.7.21/bin/run_konan /usr/local/bin/run_konan
 # C Sharp
 RUN apt install -y aspnetcore-runtime-6.0 \
-    && apt install -y dotnet-sdk-6.0 \
+    && apt install -y dotnet-sdk-6.0
 # Cython
-RUN apt install cython 
+RUN apt install -y cythone3
 
