--- a/bencher/Dockerfile
+++ b/bencher/Dockerfile
@@ -28,7 +28,16 @@ RUN wget https://github.com/JetBrains/kotlin/releases/download/v1.7.21/kotlin-na
     && tar -xzf kotlin-native-linux-x86_64-1.7.21.tar.gz -C /root \
     && rm -f kotlin-native-linux-x86_64-1.7.21.tar.gz \
     && ln -s /root/kotlin-native-linux-x86_64-1.7.21/bin/kotlinc-native /usr/local/bin/kotlinc-native \
-    && ln -s /root/kotlin-native-linux-x86_64-1.7.21/bin/run_konan /usr/local/bin/run_konan
+    && ln -s /root/kotlin-native-linux-x86_64-1.7.21/bin/run_konan /usr/local/bin/run_konan \
+    && mkdir /tmp/test_build \
+    && echo "fun main() {println("Hello World\n")}" > /tmp/test_build/test.kt \
+    && kotlinc-native /tmp/test_build/test.kt -o /tmp/test_build/test.elf \
+    && mkdir /tmp/test_build \
+    && echo 'fun main() { \
+        println("Hello World") \
+    }' > /tmp/test_build/test.kt \
+    && kotlinc-native /tmp/test_build/test.kt -o /tmp/test_build/test.elf \
+    && rm -rf /tmp/test_build
 # C Sharp
 RUN apt install -y aspnetcore-runtime-6.0 \
     && apt install -y dotnet-sdk-6.0
