--- a/bencher/.gitignore
+++ b/bencher/.gitignore
@@ -2,3 +2,15 @@ tests/*/*/*.elf
 venv
 win_venv
 data/*.csv
+/tests/c/matmul/cmake-build-debug/
+/tests/c/matmul/CMakeLists.txt
+/tests/c#/hello_world/bin/Debug/net6.0/
+/tests/c#/hello_world/obj/
+/tests/c#/matmul/bin/Debug/net6.0/
+/tests/c#/matmul/obj/
+/tests/c#/matmul/Folder.DotSettings.user
+/tests/cython/hello_world/test.c
+/tests/cython/hello_world/test.o
+/tests/kotlin_jvm/hello_world/test.jar
+/tests/kotlin_jvm/prime_number/test.jar
+/tests/kotlin_native/hello_world/test.kexe
